objects/CRM_Mtg_Email_Template_Images_Url__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>CRM_Mtg_Email_Image__c</fullName>
        <label>Email Image</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Facebook_Image__c</fullName>
        <label>Facebook Image</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Footer_Image__c</fullName>
        <label>Footer Image</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Footer_Signature_Image__c</fullName>
        <label>Footer Signature Image</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Google_Image__c</fullName>
        <label>Google Image</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Header_Image__c</fullName>
        <label>Header Image</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Linkedin_Image__c</fullName>
        <label>Linkedin Image</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Pepper_Money_Logo__c</fullName>
        <label>Pepper Money Logo</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Pepper_Money_Signature_Logo__c</fullName>
        <label>Pepper Money Signature Logo</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Phone_Image__c</fullName>
        <label>Phone Image</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Triangle_Url__c</fullName>
        <label>Triangle Url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Twitter_Image__c</fullName>
        <label>Twitter Image</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Youtube_Image__c</fullName>
        <label>Youtube Image</label>
        <type>Url</type>
    </fields>
    <label>Email Template Image Url</label>
</CustomObject>